@@ -1,3 +1,8 @@
+2002-07-22  Keith Seitz  <keiths@redhat.com>
+
+	* mi-cli.exp: Use mi_run_to_main to get to main. Don't use "run".
+	Refine result string for "-interpreter-exec console bougs" test.
+	
 2002-06-25  Keith Seitz  <keiths@redhat.com>
 
 	* mi-cli.exp: Add tests to check if list_command in the console
